deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jhipster-registry
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jhipster-registry
    spec:
      containers:
      - name: jhipster-registry
        image: jhipster/jhipster-registry:v4.1.1
        imagePullPolicy: IfNotPresent
        command: ["/bin/sh", "-ec", "sleep 3000"]
        volumeMounts:
        - mountPath: "./central-server-config"
          name: central-config
        ports:
        - containerPort: 8761
      volumes:
      - name: central-config
        persistentVolumeClaim:
          claimName: central-config-pvc
