service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jhipster-registry
  labels:
    app: jhipster-registry
spec:
  ports:
  - port: 8761
    protocol: TCP
  selector:
    app: jhipster-registry
